examples/test/testpolicy13745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13745
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key7: value43
      key12: value25
      key30: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value16
          key14: value1
      podSelector:
        matchLabels:
          key21: value4
          key41: value37
          key43: value22
